# qqn-jax

./: .gitignore  .llmignore  README.md  algorithm.md  build.sh  libraries.md  notes.md  patch.diff  plan.md  pyproject.toml  python.md  rebuild.sh  remove_comments.sh  results-viewer-nodes.md  results-viewer.html  results.md  run_reports.js  run_reports.sh  spline_demo.html
docs/: algorithm.md  conclusions.md  equivalences.md  future_work.md  genesis.md  ideal_problem.md  oracles.md  positioning.md  python.md  regions.md  results.md  results.review.op.md  results.update.op.md  spline_search.md
examples/: README.md  basic_usage.py  fashion_mnist_mlp_comparison.md  fashion_mnist_mlp_comparison.py  mnist_comparison.md  mnist_comparison.py  mnist_sparse_benchmark.md  mnist_sparse_benchmark.py  optimizer_profiles.py
experiments/: __init__.py  config.py  driver.py  env.py  sparse_config.py  sparse_driver.py
qqn_jax/: README.md  __init__.py  lbfgs.py  line_search.py  oracles.py  profiling.py  regions.py  regularizers.py  rolling_window_activation.py  solver.algorithm.md  solver.py  spline_search.md  spline_search.py  types.py  utils.py
results/: README.md  fashion_mnist_Adam_20260721-102000.json  fashion_mnist_Adam_20260721-102613.json  fashion_mnist_Adam_20260721-103228.json  fashion_mnist_Adam_20260721-103841.json  fashion_mnist_Adam_20260721-104455.json  fashion_mnist_Adam_20260721-105109.json  fashion_mnist_Adam_20260721-105724.json  fashion_mnist_Adam_20260721-110339.json  fashion_mnist_Adam_20260721-110952.json  fashion_mnist_Adam_20260721-111606.json  (+296 more)
(+290 files in other folders)
